@@ -1498,7 +1498,8 @@ MagickExport Image *ResizeImage(const Image *image,const unsigned long columns,
 %
 %  SampleImage() scales an image to the desired dimensions with pixel
 %  sampling.  Unlike other scaling methods, this method does not introduce
-%  any additional color into the scaled image.
+%  any additional color into the scaled image. SampleImage() is extremely
+%  fast and may be used where speed is most important.
 %
 %  The format of the SampleImage method is:
 %
@@ -1663,7 +1664,10 @@ SampleImage(const Image *image,const unsigned long columns,
 %                                                                             %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-%  ScaleImage() changes the size of an image to the given dimensions.
+%  ScaleImage() changes the size of an image to the specified dimensions.
+%  This method is reasonably fast but it is not currently multi-threaded
+%  and does not support image filters. The quality of the resized image
+%  is sufficient for most purposes.
 %
 %  The format of the ScaleImage method is:
 %
@@ -2103,8 +2107,10 @@ MagickExport Image *ScaleImage(const Image *image,const unsigned long columns,
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 %  ThumbnailImage() changes the size of an image to the given dimensions.
-%  This method was designed by Bob Friesenhahn as a low cost thumbnail
-%  generator.
+%  This method was designed as a low cost thumbnail generator.
+%  ThumbnailImage() is typically very fast but an attempt is made to improve
+%  quality by first using a simple sampling algorithm for part of the
+%  reduction, and then a filtering algorithm to produce the final image.
 %
 %  The format of the ThumbnailImage method is:
 %
