@@ -155,7 +155,8 @@ are windowed (brought down to zero) with the Blackman filter.</p>
 <h2>Description</h2>
 <p>SampleImage() scales an image to the desired dimensions with pixel
 sampling.  Unlike other scaling methods, this method does not introduce
-any additional color into the scaled image.</p>
+any additional color into the scaled image. SampleImage() is extremely
+fast and may be used where speed is most important.</p>
 <p>The format of the SampleImage method is:</p>
 <pre class="literal-block">
 <a class="reference external" href="../api/types.html#image">Image</a> *SampleImage( const <a class="reference external" href="../api/types.html#image">Image</a> *image, const unsigned long columns,
@@ -184,7 +185,10 @@ any additional color into the scaled image.</p>
 </div>
 <div class="section" id="id8">
 <h2>Description</h2>
-<p>ScaleImage() changes the size of an image to the given dimensions.</p>
+<p>ScaleImage() changes the size of an image to the specified dimensions.
+This method is reasonably fast but it is not currently multi-threaded
+and does not support image filters. The quality of the resized image
+is sufficient for most purposes.</p>
 <p>The format of the ScaleImage method is:</p>
 <pre class="literal-block">
 <a class="reference external" href="../api/types.html#image">Image</a> *ScaleImage( const <a class="reference external" href="../api/types.html#image">Image</a> *image, const unsigned long columns,
@@ -214,8 +218,10 @@ any additional color into the scaled image.</p>
 <div class="section" id="id10">
 <h2>Description</h2>
 <p>ThumbnailImage() changes the size of an image to the given dimensions.
-This method was designed by Bob Friesenhahn as a low cost thumbnail
-generator.</p>
+This method was designed as a low cost thumbnail generator.
+ThumbnailImage() is typically very fast but an attempt is made to improve
+quality by first using a simple sampling algorithm for part of the
+reduction, and then a filtering algorithm to produce the final image.</p>
 <p>The format of the ThumbnailImage method is:</p>
 <pre class="literal-block">
 <a class="reference external" href="../api/types.html#image">Image</a> *ThumbnailImage( const <a class="reference external" href="../api/types.html#image">Image</a> *image, const unsigned long columns,
