@@ -47,8 +47,8 @@
 <div class="section" id="synopsis">
 <h2>Synopsis</h2>
 <pre class="literal-block">
-MagickPassFail GetImageStatistics( const <a class="reference external" href="../api/types.html#image">Image</a> *image,
-                                   ImageStatistics *statistics <a class="reference external" href="../api/types.html#exceptioninfo">ExceptionInfo</a> *exception );
+MagickPassFail GetImageStatistics( const <a class="reference external" href="../api/types.html#image">Image</a> *image, ImageStatistics *statistics,
+                                   <a class="reference external" href="../api/types.html#exceptioninfo">ExceptionInfo</a> *exception );
 </pre>
 </div>
 <div class="section" id="description">
@@ -61,8 +61,8 @@ the statistics in quantum units. Statistics for non-existent channels are
 set to zero.</p>
 <p>The format of the GetImageStatistics method is:</p>
 <pre class="literal-block">
-MagickPassFail GetImageStatistics( const <a class="reference external" href="../api/types.html#image">Image</a> *image,
-                                   ImageStatistics *statistics <a class="reference external" href="../api/types.html#exceptioninfo">ExceptionInfo</a> *exception );
+MagickPassFail GetImageStatistics( const <a class="reference external" href="../api/types.html#image">Image</a> *image, ImageStatistics *statistics,
+                                   <a class="reference external" href="../api/types.html#exceptioninfo">ExceptionInfo</a> *exception );
 </pre>
 <dl class="docutils">
 <dt>image:</dt>
